--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 	<meta name="og:description" content="Known for our tapas and the town's best outdoor dining, we've been offering exceptional food at a great value for over 10 years."/>
 	<meta name="og:image" content="%PUBLIC_URL%/little-lemon-restaurant-01.jpg"/>
 
+	<script src="https://raw.githubusercontent.com/courseraap/capstone/main/api.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
